# wai-middleware-consul

./: .gitignore  .travis.yml  LICENSE  README.md  stack.yaml  wai-middleware-consul.cabal
example/: Main.hs
src/Network/Wai/Middleware/: Consul.hs
src/Network/Wai/Middleware/Consul/: GitHub.hs
