name:                wai-middleware-consul
version:             0.1.0.0
homepage:            https://github.com/fpco/wai-middleware-consul
synopsis:            Wai Middleware for Consul
description:         Proxies data to/from Consul. Watches for updates.
category:            Network
license:             Apache-2.0
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fpco/wai-middleware-consul

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Consul
                     , Network.Wai.Middleware.Consul.GitHub
  build-depends:       base >=4.7
                     , async
                     , base-prelude
                     , bytestring
                     , consul-haskell
                     , http-client
                     , http-types
                     , network
                     , process
                     , text
                     , wai

executable wai-middleware-consul-example
  default-language:    Haskell2010
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base >=4.7
                     , async
                     , base-prelude
                     , wai
                     , wai-app-static
                     , wai-extra
                     , wai-middleware-consul
                     , warp
