name:                wai-middleware-consul
version:             0.1.0.0
homepage:            https://github.com/fpco/wai-middleware-consul
synopsis:            Wai Middleware for Consul
description:         Proxies data to/from Consul. Watches for updates.
category:            Network
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/fpco/wai-middleware-consul

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Network.Wai.Middleware.Consul
                     , Network.Wai.Middleware.Consul.GitHub
  build-depends:       async
                     , base >=4.7
                     , base-prelude
                     , bytestring
                     , conduit
                     , conduit-extra
                     , consul-haskell
                     , data-default
                     , enclosed-exceptions
                     , http-client
                     , http-types
                     , monad-control
                     , monad-logger
                     , network
                     , process
                     , resourcet
                     , text
                     , transformers
                     , wai
                     , wai-conduit

executable wai-middleware-consul-example
  default-language:    Haskell2010
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       async
                     , base >=4.7
                     , base-prelude
                     , monad-logger
                     , transformers
                     , wai
                     , wai-app-static
                     , wai-extra
                     , wai-middleware-consul
                     , warp
